@@ -1,3 +1,14 @@
+2008-11-03  Pierre-Olivier Latour  <pol@apple.com>
+
+        Reviewed by Dan Bernstein.
+
+        Fixed the override of the "AppleScrollBarVariant" system setting to also work with HIToolbox.
+
+        https://bugs.webkit.org/show_bug.cgi?id=22054
+
+        * DumpRenderTree/mac/DumpRenderTree.mm:
+        (setDefaultsToConsistentValuesForTesting):
+
 2008-10-31  Cameron Zwarich  <zwarich@apple.com>
 
         Not reviewed.
